<resources>
    <string name="app_name">Chow</string>
    <string name="action_logout">Logout</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_number">Mobile number</string>
    <string name="hint_delivery_address">Delivery address</string>
    <string name="signup_text">Create Account</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_cancel">Cancel</string>
    <string name="text_chow">Chow</string>
    <string name="login_facebook">Login with Facebook!</string>
    <string name="login_error_message">An error occurred, Please ensure you have a network connection and try again!
    </string>
    <string name="login_error_title">Oops!</string>
    <string name="login_phone">Sign in with Phone</string>
    <string name="sign_in_text">To continue with Chow, you have to sign in</string>
    <string name="terms_and_policy_text">By signing in, you agree to our Terms \nand Privacy Policy</string>
    <string name="done">Done</string>
    <string name="name_hint">Name</string>
    <string name="restaurant_name_hint">Restaurant Name</string>
    <string name="name_confirmation_text">Your name and address will be attached to your profile,
        and will be shown to vendors for delivery purposes.
    </string>
    <string name="info_confirmation_text">Information provided will be attached to your profile,
        and will be shown to users and customers.
    </string>
    <string name="additional_details">Additional Details</string>
    <string name="restaurants">Restaurants</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="content_desc_restaurant_image">Restaurant Image</string>
    <string name="address">Address</string>
    <string name="call_outlet">Call Outlet</string>
    <string name="get_directions">Get Directions</string>
    <string name="no_offers">We have nothing at this time.</string>
    <string name="no_menu">There are no items on your Menu.</string>
    <string name="no_menu_sub">Click \'+\' to add one</string>
    <string name="check_back_later">Check back later</string>
    <string name="content_desc_food_image">Food Image</string>
    <string name="add_to_order">Add To Order</string>
    <string name="address_hint">Address</string>
    <string name="edit">Edit</string>
    <string name="history">History</string>
    <string name="details">Details</string>
    <string name="quantity">quantity</string>
    <string name="naira_sign">\u20A6</string>
    <string name="number_format">%02d</string>
    <string name="thousand_format">%,.2f</string>
    <string name="naira_thousand_format">\u20A6%,.2f</string>
    <string name="place_order">Place Order</string>
    <string name="no_orders">You have no orders.</string>
    <string name="no_orders_sub">Look around for something you like</string>
    <string name="change">Change</string>
    <string name="delivery_period">Delivery Period</string>
    <string name="five_to_six_pm">05:00 PM - 06:00 PM</string>
    <string name="one_to_two_pm">01:00 PM - 02:00 PM</string>
    <string name="ten_to_eleven_am">10:00 AM - 11:00 AM</string>
    <string name="sub_total">Sub Total</string>
    <string name="tax">Tax</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="check_out_order">Check Out Order</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="restaurant">Restaurant</string>
    <string name="customer">Customer</string>
    <string name="restaurant_description_hint">Describe Your Story</string>
    <string name="food_description_hint">Describe the Food</string>
    <string name="location">Location</string>
    <string name="set_banner_image">Set Banner Image</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="take_camera_picture">Take a Picture</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="which_one_are_you">Which one are you?</string>
    <string name="restaurant_avatar">Restaurant Avatar</string>
    <string name="customer_avatar">Customer Avatar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_item">Add Item</string>
    <string name="food_details">Food Details</string>
    <string name="food_name_hint">Food Name</string>
    <string name="price_hint">Price (\u20A6)</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign Out</string>
    <string name="active">Active</string>
    <string name="processed">Processed</string>
</resources>
