<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.AuthFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/layout_center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sign_in_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="bottom|center"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/sign_in_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintBottom_toTopOf="@id/label_auth_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_auth_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_double_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/which_one_are_you"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintBottom_toTopOf="@id/layout_user_category" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_user_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/avatar_restaurant"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:adjustViewBounds="true"
                android:alpha=".5"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/restaurant_avatar"
                android:focusable="true"
                android:src="@drawable/bitmoji_chef"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/text_margin"
                android:text="@string/restaurant"
                android:textSize="@dimen/description_text_size"
                app:layout_constraintEnd_toEndOf="@id/avatar_restaurant"
                app:layout_constraintStart_toStartOf="@id/avatar_restaurant"
                app:layout_constraintTop_toBottomOf="@id/avatar_restaurant" />

            <ImageView
                android:id="@+id/avatar_customer"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:adjustViewBounds="true"
                android:alpha=".5"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/customer_avatar"
                android:focusable="true"
                android:src="@drawable/bitmoji_person"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/text_margin"
                android:text="@string/customer"
                android:textSize="@dimen/description_text_size"
                app:layout_constraintEnd_toEndOf="@id/avatar_customer"
                app:layout_constraintStart_toStartOf="@id/avatar_customer"
                app:layout_constraintTop_toBottomOf="@id/avatar_customer" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/button_phone_login"
        app:layout_constraintStart_toStartOf="@id/button_phone_login"
        app:layout_constraintTop_toTopOf="@id/button_phone_login" />

    <!--<androidx.appcompat.widget.LinearLayoutCompat-->
    <!--android:id="@+id/bottom_container"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical"-->
    <!--android:paddingBottom="@dimen/activity_horizontal_margin"-->
    <!--app:layout_constraintBottom_toBottomOf="parent">-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_phone_login"
        style="@style/PhoneLoginButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/terms_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/terms_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/terms_and_policy_text"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!--</androidx.appcompat.widget.LinearLayoutCompat>-->

</androidx.constraintlayout.widget.ConstraintLayout>