<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.SignUpDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/appbar">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:navigationIcon="@drawable/ic_arrow_back"
                android:layout_width="match_parent"
                app:title="@string/additional_details"
                app:titleTextColor="@android:color/white"
                android:layout_height="wrap_content"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_name_field_wrapper"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            android:hint="@string/name_hint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:imeOptions="actionDone">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_user_name"
                android:textSize="@dimen/description_text_size"
                android:layout_width="match_parent"
                android:inputType="textCapWords"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_address_field_wrapper"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/layout_name_field_wrapper"
            android:hint="@string/address_hint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:imeOptions="actionDone">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_user_address"
                android:textSize="@dimen/description_text_size"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/label_info"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@id/layout_address_field_wrapper"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/name_confirmation_text"
            android:textSize="@dimen/description_text_size"/>

    <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar"
            app:layout_constraintTop_toTopOf="@id/button_done"
            app:layout_constraintBottom_toBottomOf="@id/button_done"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toStartOf="@id/button_done"
            android:layout_height="28dp"
            android:visibility="invisible"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/description_text_size"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@id/label_info"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Colored"/>

</androidx.constraintlayout.widget.ConstraintLayout>